fix(about): adjust margin for headings in About component for consistent spacing

--- a/packages/web-qwik/src/components/main/about.module.scss
+++ b/packages/web-qwik/src/components/main/about.module.scss
@@ -28,6 +28,7 @@
 }
 
 .badge-container {
+  margin: 2rem 0;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(6rem, 1fr));
   gap: 2rem 0.25rem;
